feat: myPage 및 배너, 사이드바 기능 추가 및 수정

--- a/marketTrio/src/main/resources/templates/thyme/banner.html
+++ b/marketTrio/src/main/resources/templates/thyme/banner.html
@@ -13,6 +13,12 @@
             padding: 7px 30px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+        .header img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin-right: 20px;
+        }
         #logo {
             width: 180px;
         }
@@ -42,11 +48,12 @@
             height: 40px;
         }
     </style>
+    
 </head>
 <body>
     <div class="header">
-        <a href="#" th:href="@{/}">
-            <img id="logo" th:src="@{/images/logo.png}" />
+        <a href="#" th:href="@{/loginAndRegister/main}">
+            <img id="logo" th:src="@{/images/logo.png}" style="border-radius: 0%;" />
         </a>
         <div class="nav">
             <a href="#" th:href="@{/shPost/list}">중고거래</a>
@@ -54,9 +61,11 @@
             <a href="#" th:href="@{/groupBuy/groupBuyList}">공동구매</a>
         </div>
         <div class="auth">
-            <a href="#" th:href="@{/loginAndRegister/login}">로그인</a>
-            <a href="#" th:href="@{/loginAndRegister/register}">회원가입</a>
-            <a><img id="profile"  th:src="@{/images/profile.png}" /></a>
+            <a id="loginLogoutLink" th:href="${memberSession != null} ? @{/loginAndRegister/logout.do} : @{/loginAndRegister/login.do}" th:text="${memberSession != null} ? '로그아웃' : '로그인'">로그인</a>
+            <a href="#" th:href="@{/loginAndRegister/register.do}">회원가입</a>
+            <a href="#" th:href="${memberSession != null} ? @{/myPage/myInfo} : @{/loginAndRegister/login.do}">
+            	<img id="profile"  th:src="@{/images/profile.png}" />
+            </a>
         </div>
     </div>
 </body>
