--- a/marketTrio/src/main/resources/templates/thyme/loginAndRegister/login.html
+++ b/marketTrio/src/main/resources/templates/thyme/loginAndRegister/login.html
@@ -56,6 +56,11 @@
             margin-left: 220px;
             padding: 20px;
         }
+        .content h2 {
+        	max-width: 650px;
+        	padding: 20px;
+            margin: auto;
+        }
         .profile-card {
             background-color: white;
             padding: 40px;
@@ -63,25 +68,6 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 600px;
             margin: auto;
-        }
-        .profile-header {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-        .profile-header img {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            margin-right: 20px;
-        }
-        .profile-header .profile-info {
-            font-size: 20px;
-            font-weight: bold;
-        }
-        .profile-header .profile-info .stars {
-            color: #ffcc00;
-            font-size: 18px;
         }
         .profile-form {
             display: flex;
@@ -109,22 +95,17 @@
     <header>
         <div th:insert="thyme/banner"></div>
     </header>
-    <div th:insert="sidebar"></div>
     <div class="content">
+        <h2>로그인</h2>
         <div class="profile-card">
-            <div class="profile-header">
-                <img src="profile-picture.png" alt="Profile Picture" th:src="@{/images/profile-picture.png}">
-                <div class="profile-info">
-                    <span th:text="${username}">세하</span>
-                    <div class="stars">★★★★☆</div>
-                </div>
-            </div>
-            <form class="profile-form">
-                <label for="user-id">아이디</label>
-                <input type="text" id="user-id" th:value="${userId}" readonly>
-                <!-- <label for="user-password">비밀번호</label> -->
-                <!-- <input type="password" id="user-password" th:value="${userPassword}" readonly> -->
-                <button type="button">수정하기</button>
+            
+            <form class="profile-form"  th:action="@{/loginAndRegister/login.do}" method="post">
+                <label for="id">아이디</label>
+                <input type="text" id="id" name="id">
+                <label for="password">비밀번호</label>
+	            <input type="password" id="password" name="password">
+	            <div th:if="${message}" style="color: red; padding-bottom:10px;" class="error-message" th:text="${message}"></div>
+                <button type="submit">로그인</button>
             </form>
         </div>
     </div>
